Replace to CV #75

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,8 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 ################################################################################
 add_subdirectory(COOP)
 add_subdirectory(UnitTestC)
-add_subdirectory(OpenCV/OpenCV)
-add_subdirectory(OpenCV/UnitTest)
+add_subdirectory(CV/CV)
+add_subdirectory(CV/UnitTest)
 
 
 
