--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -13,7 +13,7 @@
       "variables": [
         {
           "name": "MEM_SIZE",
-          "value": "int",
+          "value": "ushort",
           "type": "STRING"
         }
       ]
